# kvs

./: Cargo.toml  README.md
src/: command.rs  error.rs  lib.rs
src/engines/: kvstore.rs  mod.rs
tests/: cli.rs  lib.rs  tests.rs
