[package]
authors = ["Vigdail <vigdail.dev@gmail.com>"]
description = "In-memory key/value storage"
edition = "2018"
name = "kvs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
failure_derive = "0.1.8"
serde = "1.0.114"
structopt = "0.3.15"
serde_json = "1.0.57"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.1.0"
walkdir = "2.3.1"
